# libre-dt-lab

./: .gitmodules  CMakeLists.txt  README_Libre_DT-Lab.md  build.sh
.ci/: ci-script.sh
.github/workflows/: BC_CM.yml  dev.yml  libre.yml  main.yml
cmake/: darktable-packaging.cmake  windows-macros.cmake
data/: CMakeLists.txt  darktableconfig.xml.in  org.libre-dt-lab.libre-dt-lab.desktop.in  org.libredtlab.libredtlab.appdata.xml.in
data/kernels/: basecurve.cl
packaging/: CMakeLists.txt
packaging/AppImage/: AppRun
packaging/macosx/: 3_make_hb_darktable_package.sh  3_make_hb_libre-dt-lab_package.sh  4_make_hb_darktable_dmg.sh  4_make_hb_libre-dt-lab_dmg.sh  Info.plist  darktable.bundle  libre-dt-lab.bundle  make-app-bundle
packaging/windows/: darktable.iss.in  libre-dt-lab.iss.in
po/: POTFILES.in
src/: CMakeLists.txt  config.cmake.h  main.c
src/ai/: backend_common.c
src/chart/: CMakeLists.txt  main.c
src/cli/: CMakeLists.txt
src/cltest/: CMakeLists.txt
src/cmstest/: CMakeLists.txt
src/common/: database.c  file_location.c  image.c  iop_order.c
src/develop/: develop.c
src/generate-cache/: CMakeLists.txt
src/gui/: about.c  gtk.c  presets.c  welcome.c
src/iop/: basecurve.c  colorequal.c  contrast.c  exposure.c
src/libs/: modulegroups.c
src/tests/: CMakeLists.txt
src/views/: darkroom.c  view.c
src/win/: darktable.rc.in  libre-dt-lab.rc.in
tools/: appimage-build-script.sh
tools/basecurve/: CMakeLists.txt
tools/noise/: CMakeLists.txt
